[package]
name = "logind-dbus"
version = "1.0.0-beta.1"
authors = [
    "Jeremy Soller <jackpot51@gmail.com>",
    "Michael Aaron Murphy <michael@system76.com>"
]
description = "Communicate with the LoginManager DBus API"
repository = "https://github.com/pop-os/logind-dbus"
readme = "README.md"
license = "MIT"
categories = ["os::unix-apis"]
keywords = ["linux", "systemd", "logind", "dbus"]
edition = "2018"

[dependencies]
zbus = { git = "https://gitlab.freedesktop.org/dbus/zbus/" }
zvariant = { git = "https://gitlab.freedesktop.org/dbus/zbus/" }